Tue Jul 13 00:46:18 1999  Philippe De Muyter  <phdm@macqel.be>

	* m68k/x-mot3300 (XCFLAGS): List of big files now includes `cse.o'.

Mon Jul 12 23:39:08 1999  Jeffrey A Law  (law@cygnus.com)

	* rs6000.md (movsf): Do not force easy FP constants into memory.

Sun Jul 11 11:21:24 1999  Jason Merrill  <jason@yorick.cygnus.com>

	* toplev.c (main): Don't complain about saying -gdwarf.

Fri Jul  9 03:51:52 1999  Jeffrey A Law  (law@cygnus.com)

	* version.c: Drop "gcc-" prefix from version #.

Thu Jul  8 19:15:51 1999  Jim Wilson  <wilson@cygnus.com>

	* unroll.c (unroll_loops): Don't delete named CODE_LABEL or
	NOTE_INSN_DELETED_LABEL note.

Thu Jul  8 14:18:46 1999  Richard Henderson  <rth@cygnus.com>

	* m68k.c (output_function_prologue): Add pic register to mask
	if live and flag_pic.
	(output_function_epilogue): Likewise.

Thu Jul  8 10:28:25 1999  Craig Burley  <craig@jcb-sc.com>

	* invoke.texi (DEC Alpha Options): Put @end table at
	beginning of line, to avoid confusing texi2html.

Wed Jul  7 02:00:04 1999  Franz Sirl  <Franz.Sirl-kernel@lauterbach.com>

	* reload1.c (gen_reload): When synthesizing a 3 operand add 
	sequence, improve test for when to reload OP1 into the reload
	register instead of OP0.

Wed Jul  7 01:38:03 1999  Jim Wilson  <wilson@cygnus.com>

	* unroll.c (unroll_loop): Don't delete NOTE_INSN_DELETED_LABEL notes.

1999-07-07  Manfred Hollstein  <mhollstein@cygnus.com>

	* m88k/dguxbcs.h (CPP_SPEC): Add missing \ in multi-line
	string literal.

Wed Jul  7 01:16:43 1999  Richard Henderson  <rth@cygnus.com>

	* ginclude/varargs.h (__builtin_va_alist_t): New typedef.
	(va_dcl): Use __builtin_va_alist_t.

Wed Jul  7 01:13:31 1999  Jason Merrill  <jason@yorick.cygnus.com>

	* dwarf2out.c (gen_struct_or_union_type_die): Only remember types
	on the permanent_obstack.
	* dwarfout.c (output_type): Likewise.

Fri Jul  2 03:05:13 1999  Jeffrey A Law  (law@cygnus.com)

	* dwarfout.c (field_byte_offset): Correctly compute the object's