@@ -1,3 +1,8 @@
+Tue Jul 13 10:44:14 1999  Jeffrey A Law  (law@cygnus.com)
+
+	* rs6000.c (find_addr_reg): Do not select r0 as an address
+	register.
+
 Tue Jul 13 00:46:18 1999  Philippe De Muyter  <phdm@macqel.be>
 
 	* m68k/x-mot3300 (XCFLAGS): List of big files now includes `cse.o'.
